# AssetStudioCxx

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO
src/: AssetsManager.cpp  CMakeLists.txt
src/files/: BundleFile.cpp
src/helpers/: EndianBinaryReader.cpp  FileReader.cpp  OffsetStream.cpp  UnityVersion.cpp
src/helpers/decompression/: Decompressor.cpp  Decompressor.hpp
src/helpers/decompression/lz4/: CMakeLists.txt  DecompressLz4.cpp  DecompressLz4.hpp
src/helpers/decompression/lzma/: CMakeLists.txt  DecompressLzma.cpp  DecompressLzma.hpp
src/include/: AssetsManager.hpp
src/include/enums/: ArchiveFlags.h  BuildTarget.h  ClassIdType.h  CnEncryptionFlags.h  CompressionType.h  Endian.h  FileType.h  SerializedFileFormatVersion.h  StorageBlockFlags.h
src/include/files/: BundleFile.hpp  StreamFile.hpp
src/include/helpers/: BigArrayPool.hpp  EndianBinaryReader.hpp  FileReader.hpp  OffsetStream.hpp  UnityVersion.hpp  UnityVersionExtensions.hpp
tools/testing-cli/: CMakeLists.txt  main.cpp
